--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -21,4 +21,14 @@ COPY --from=builder /app/dist .
 
 RUN npm ci --only=production
 
+RUN apt-get update && apt-get install -y \
+    python \
+    python-pip \
+    sqlite \
+    jq \
+&& rm -rf /var/lib/apt/lists/*
+
+RUN pip install --upgrade pyasn1-modules
+RUN pip install sqlitebiter[gs]
+
 CMD ["node", "./index.js"]
